--- a/index.html
+++ b/index.html
@@ -14,13 +14,11 @@
     <h1>LIFF Reserve</h1>
     <p id="status">Loading...</p>
 
-    <label>
-      日付を選択：
-      <input id="date" type="date" />
-    </label>
+    <div id="calendar"></div>
 
+    <p id="slotCount"></p>
     <div id="slots"></div>
 
-    <script defer src="./app.js?v=20251229-3"></script>
+    <script defer src="./app.js"></script>
   </body>
 </html>
