--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
     <h1>LIFF Reserve</h1>
     <p id="status">Loading...</p>
 
-    <div id="calendar"></div>
+    <label>
+      日付を選択：
+      <input id="date" type="date" />
+    </label>
 
-    <p id="slotCount"></p>
     <div id="slots"></div>
 
-    <script defer src="./app.js"></script>
+    <script defer src="./app.js?v=20251229-3"></script>
   </body>
 </html>
