--- a/index.html
+++ b/index.html
@@ -436,6 +436,6 @@
       </nav>
     </div>
 
-    <script src="./app.js?v=20260104"></script>
+    <script src="./app.js?v=20260104-1"></script>
   </body>
 </html>
