--- a/index.html
+++ b/index.html
@@ -317,6 +317,22 @@
         width: 1px;
         height: 1px;
       }
+      .danger-btn {
+        border: 0;
+        padding: 10px 12px;
+        border-radius: 12px;
+        font-weight: 800;
+        background: rgba(220, 38, 38, 0.12);
+        color: rgb(220, 38, 38);
+      }
+      .ghost-btn {
+        border: 0;
+        padding: 10px 12px;
+        border-radius: 12px;
+        font-weight: 800;
+        background: rgba(11, 91, 211, 0.08);
+        color: #0b5bd3;
+      }
     </style>
   </head>
 
