--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         background: var(--card);
         border-radius: var(--radius-lg);
         padding: 14px 16px;
-        box-shadow: var(--shadow);
+        margin-bottom: 10px;
       }
 
       #calendar {
