--- a/index.html
+++ b/index.html
@@ -606,7 +606,9 @@
         <section id="viewCalendar" class="view">
           <div class="title">日付選択</div>
           <div class="subtitle">今日以降の予約可能日を選んでね</div>
-          <div id="calendar"></div>
+          <div class="card">
+            <div id="calendar"></div>
+          </div>
         </section>
 
         <section id="viewSlots" class="view hidden">
