--- a/index.html
+++ b/index.html
@@ -484,8 +484,12 @@
         line-height: 1.5;
         color: var(--text-weak);
       }
+
       .card {
         line-height: 1.5;
+      }
+
+      #viewCalendar .card {
       }
 
       /* --- tap feedback: iOSっぽい押し感 --- */
