--- a/index.html
+++ b/index.html
@@ -332,6 +332,7 @@
         font-weight: bold;
         background: rgb(255 200 200);
         color: #d30000;
+        font-size: 14px;
       }
       .ghost-btn {
         border: 0;
@@ -340,6 +341,7 @@
         font-weight: bold;
         background: rgb(197 220 255);
         color: #004bbc;
+        font-size: 14px;
       }
       .modal-overlay {
         position: fixed;
