--- a/index.html
+++ b/index.html
@@ -195,12 +195,8 @@
         letter-spacing: 0.02em;
       }
 
-      #slotsPM .slot-btn:first-of-type,
-      #slotsAM .slot-btn:first-of-type {
-      }
-
-      #slotsPM .slot-btn:last-of-type,
-      #slotsAM .slot-btn:last-of-type {
+      #slotsPM,
+      #slotsAM {
       }
 
       .slot-btn {
