--- a/index.html
+++ b/index.html
@@ -204,15 +204,16 @@
       .slot-btn {
         width: 100%;
         border: 0;
-        padding: 14px 18px;
-        border-radius: var(--radius);
-        background: var(--bg);
+        padding: 16px 20px;
+        /* border-radius: var(--radius); */
+        background: none;
         /* margin: 10px 0; */
         text-align: left;
         font-size: 16px;
         font-weight: bold;
         color: #0b5bd3;
       }
+
       .slot-btn + .slot-btn {
       }
       .slot-btn:active {
