--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
       .slot-btn {
         width: 100%;
         border: 0;
-        padding: 16px 20px;
+        padding: 18px 20px;
         /* border-radius: var(--radius); */
         background: none;
         /* margin: 10px 0; */
@@ -213,9 +213,10 @@
         font-weight: bold;
         color: #0b5bd3;
       }
-
       .slot-btn + .slot-btn {
+        border-top: 1px solid #eee;
       }
+
       .slot-btn:active {
         background: var(--tap);
         transform: translateY(1px);
