--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         resize: vertical;
       }
 
-      ..primary {
+      .primary {
         width: 100%;
         border: 0;
         padding: 18px 16px;
