--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
       <header class="header">
         <div class="header-inner">
           <div class="brand">
-            <div class="logo">b. Reserve</div>
+            <div class="logo">Sketch Reserve</div>
             <div class="sub">LINE予約</div>
           </div>
           <div
