--- a/index.html
+++ b/index.html
@@ -710,6 +710,36 @@
           <div id="listStatus" style="opacity: 0.7; margin: 8px 0 14px"></div>
           <div id="listRoot"></div>
         </section>
+
+        <section id="viewSettings" class="hidden">
+          <div class="card">
+            <div style="font-weight: 700; font-size: 16px">ご案内</div>
+            <div style="margin-top: 10px; line-height: 1.7">
+              <div style="font-weight: 700; margin-top: 10px">お問い合わせ</div>
+              <div>お急ぎの方：090-xxxx-xxxx</div>
+              <div>メール：info@example.com</div>
+              <div>受付時間：平日 9:00〜18:00</div>
+
+              <hr style="opacity: 0.2; margin: 12px 0" />
+
+              <div style="font-weight: 700">キャンセルについて</div>
+              <div>キャンセルは「予約一覧」から行えます。</div>
+
+              <hr style="opacity: 0.2; margin: 12px 0" />
+
+              <div style="font-weight: 700">個人情報の取り扱い</div>
+              <div>
+                入力いただいた情報は、予約管理とご連絡の目的にのみ利用します。
+              </div>
+
+              <div style="font-weight: 700; margin-top: 10px">免責事項</div>
+              <div>
+                通信環境や端末の状態により、表示・予約が正常に行えない場合があります。
+                その際は時間をおいて再度お試しください。
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
 
       <nav class="tabbar" aria-label="tabbar">
