--- a/index.html
+++ b/index.html
@@ -753,8 +753,8 @@
             <div>予約一覧</div>
           </button>
           <button id="tabSettings" class="tab" type="button">
-            <div class="ico">⚙️</div>
-            <div>設定</div>
+            <div class="ico">ℹ️</div>
+            <div>ご案内</div>
           </button>
         </div>
       </nav>
