--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         max-width: 720px;
         padding: 10px 16px 18px;
         -webkit-overflow-scrolling: touch;
-        padding-bottom: calc(var(--tabbar-h) + var(--safe-b) + 22px);
+        /* padding-bottom: calc(var(--tabbar-h) + var(--safe-b) + 22px); */
         background-color: #efefef;
       }
 
