--- a/index.html
+++ b/index.html
@@ -716,9 +716,12 @@
             <div style="font-weight: 700; font-size: 16px">ご案内</div>
             <div style="margin-top: 10px; line-height: 1.7">
               <div style="font-weight: 700; margin-top: 10px">お問い合わせ</div>
-              <div>お急ぎの方：090-xxxx-xxxx</div>
-              <div>メール：info@example.com</div>
-              <div>受付時間：平日 9:00〜18:00</div>
+              <div>お急ぎの方：0766-30-3244</div>
+              <div>受付時間：平日 10:00〜18:00</div>
+              <div>
+                〒933-0871<br />
+                富山県高岡市駅南2-3-5 西側１階
+              </div>
 
               <hr style="opacity: 0.2; margin: 12px 0" />
 
@@ -734,8 +737,16 @@
 
               <div style="font-weight: 700; margin-top: 10px">免責事項</div>
               <div>
-                通信環境や端末の状態により、表示・予約が正常に行えない場合があります。
+                通信環境や端末の状態により、表示・予約が正常に行えない場合があります。<br />
                 その際は時間をおいて再度お試しください。
+              </div>
+
+              <hr style="opacity: 0.2; margin: 12px 0" />
+
+              <div style="font-size: 12px; color: #666; line-height: 1.6">
+                本アプリは「KID ACADEMY＋ 高岡駅南校」の<br />
+                ご利用者さま向け予約管理ツールです。<br />
+                運営：スケッチ株式会社
               </div>
             </div>
           </div>
