--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Sketch Reserve</title>
+    <title>KID ACADEMY＋ Reserve</title>
 
     <!-- LIFF -->
     <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
@@ -605,7 +605,7 @@
       <header class="header">
         <div class="header-inner">
           <div class="brand">
-            <div class="logo">Sketch Reserve</div>
+            <div class="logo">KID ACADEMY＋ Reserve</div>
             <div class="sub">LINE予約</div>
           </div>
           <div
