--- a/index.html
+++ b/index.html
@@ -239,6 +239,13 @@
         font-size: 16px;
         outline: none;
         margin: 10px 0 0;
+        outline: none;
+        -webkit-tap-highlight-color: transparent;
+      }
+      input:focus,
+      textarea:focus {
+        box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15);
+        border-color: rgba(0, 0, 0, 0.3);
       }
       textarea {
         min-height: 140px;
