--- a/index.html
+++ b/index.html
@@ -244,8 +244,7 @@
       }
       input:focus,
       textarea:focus {
-        box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15);
-        border-color: rgba(0, 0, 0, 0.3);
+        background: #d1dcf4;
       }
       textarea {
         min-height: 140px;
@@ -542,15 +541,6 @@
       }
 
       /* --- focus: 入力時の気持ちよさ --- */
-      input,
-      textarea {
-        border: 1px solid transparent;
-      }
-      input:focus,
-      textarea:focus {
-        border-color: var(--focus);
-        box-shadow: 0 0 0 4px rgba(11, 91, 211, 0.1);
-      }
 
       /* --- buttons: disabled状態を揃える --- */
       .primary:disabled,
