--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
       }
       input:focus,
       textarea:focus {
-        background: #d1dcf4;
+        background: #dbeafe;
       }
       textarea {
         min-height: 140px;
