--- a/index.html
+++ b/index.html
@@ -602,8 +602,8 @@
       <header class="header">
         <div class="header-inner">
           <div class="brand">
-            <div class="logo">KID ACADEMY＋ Reserve</div>
-            <div class="sub">LINE予約</div>
+            <div class="logo">こんにちは〇〇さん</div>
+            <div class="sub">KID ACADEMY＋ 高岡駅南校</div>
           </div>
           <div
             style="
@@ -612,7 +612,7 @@
               font-size: 12px;
             "
           >
-            LIFF
+            KID ACADEMY＋ Reserve
           </div>
         </div>
       </header>
