--- a/index.html
+++ b/index.html
@@ -603,16 +603,16 @@
         <div class="header-inner">
           <div class="brand">
             <div class="logo">こんにちは〇〇さん</div>
-            <div class="sub">KID ACADEMY＋ 高岡駅南校</div>
+            <div class="sub">予約ツール</div>
           </div>
           <div
             style="
-              font-weight: 800;
+              font-weight: bold;
               color: rgba(0, 0, 0, 0.35);
               font-size: 12px;
             "
           >
-            KID ACADEMY＋ Reserve
+            KID ACADEMY＋ 高岡駅南校
           </div>
         </div>
       </header>
