--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         margin: 0 auto;
         padding: 14px 16px;
         display: flex;
-        align-items: center;
+        align-items: flex-end;
         justify-content: space-between;
         gap: 10px;
       }
