--- a/index.html
+++ b/index.html
@@ -78,9 +78,10 @@
         display: flex;
         flex-direction: column;
         line-height: 1.1;
+        gap: 3px;
       }
       .brand .logo {
-        font-weight: 800;
+        font-weight: bold;
         letter-spacing: 0.02em;
       }
       .brand .sub {
