--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
       }
       .brand .logo {
         font-weight: bold;
-        letter-spacing: 0.02em;
+        font-size: 15px;
       }
       .brand .sub {
-        font-size: 12px;
+        font-size: 11px;
         color: var(--muted);
         margin-top: 4px;
       }
@@ -603,7 +603,7 @@
       <header class="header">
         <div class="header-inner">
           <div class="brand">
-            <div class="logo">こんにちは〇〇さん</div>
+            <div class="logo" id="headerGreeting">こんにちは〇〇さん</div>
             <div class="sub">予約ツール</div>
           </div>
           <div
