--- a/index.html
+++ b/index.html
@@ -602,18 +602,10 @@
     <div class="app">
       <header class="header">
         <div class="header-inner">
+          <div class="logo" id="headerGreeting">こんにちは〇〇さん</div>
           <div class="brand">
-            <div class="logo" id="headerGreeting">こんにちは〇〇さん</div>
-            <div class="sub">予約ツール</div>
-          </div>
-          <div
-            style="
-              font-weight: bold;
-              color: rgba(0, 0, 0, 0.35);
-              font-size: 12px;
-            "
-          >
-            KID ACADEMY＋ 高岡駅南校
+            <div class="sub">KID ACADEMY＋ 高岡駅南校</div>
+            <div class="cap">予約ツール</div>
           </div>
         </div>
       </header>
