--- a/index.html
+++ b/index.html
@@ -74,17 +74,23 @@
         justify-content: space-between;
         gap: 10px;
       }
+      .header-inner .logo {
+        font-weight: bold;
+        font-size: 15px;
+      }
       .brand {
         display: flex;
         flex-direction: column;
         line-height: 1.1;
         gap: 3px;
       }
-      .brand .logo {
-        font-weight: bold;
-        font-size: 15px;
-      }
       .brand .sub {
+        font-size: 11px;
+        color: var(--muted);
+        margin-top: 4px;
+      }
+
+      .brand .cap {
         font-size: 11px;
         color: var(--muted);
         margin-top: 4px;
