--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
     <div class="app">
       <header class="header">
         <div class="header-inner">
-          <div class="logo" id="headerGreeting">こんにちは〇〇さん</div>
+          <div class="logo" id="headerGreeting">こんにちは</div>
           <div class="brand">
             <div class="sub">KID ACADEMY＋ 高岡駅南校</div>
             <div class="cap">ご利用者さま専用予約ツール</div>
