--- a/index.html
+++ b/index.html
@@ -144,6 +144,13 @@
         margin-bottom: 10px;
       }
 
+      .list-heading {
+        margin: 16px 0 8px;
+        font-size: 13px;
+        font-weight: 700;
+        color: rgba(0, 0, 0, 0.6);
+      }
+
       #calendar {
       }
       .flatpickr-calendar {
