--- a/index.html
+++ b/index.html
@@ -705,7 +705,8 @@
 
         <section id="viewList" class="view hidden">
           <div class="title">予約一覧</div>
-          <div id="listStatus" style="opacity: 0.7; margin: 8px 0 14px"></div>
+          <!-- これ消してOK -->
+          <!-- <div id="listStatus" style="opacity:0.7; margin:8px 0 14px"></div> -->
           <div id="listRoot"></div>
         </section>
 
@@ -819,6 +820,6 @@
       </div>
     </div>
 
-    <script src="./app.js?v=20260105-10"></script>
+    <script src="./app.js?v=20260105-11"></script>
   </body>
 </html>
