--- a/index.html
+++ b/index.html
@@ -151,6 +151,8 @@
         color: rgba(0, 0, 0, 0.6);
       }
 
+      #calendar {
+      }
       .flatpickr-calendar {
         width: 100% !important;
         border: 0 !important;
@@ -158,25 +160,8 @@
         box-shadow: var(--shadow) !important;
         overflow: hidden;
       }
-      /* 年の input を完全に無効化 */
-      .flatpickr-current-month input.cur-year {
-        pointer-events: none !important;
-        appearance: none;
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        background: transparent;
-        border: none;
-        box-shadow: none;
-        outline: none;
-        cursor: default;
-      }
-
-      /* hover / focus の見た目も消す */
-      .flatpickr-current-month input.cur-year:hover,
-      .flatpickr-current-month input.cur-year:focus {
-        background: transparent;
-        box-shadow: none;
-        outline: none;
+      .flatpickr-current-month .numInputWrapper {
+        pointer-events: none;
       }
       .flatpickr-months {
         padding: 8px 10px;
