--- a/index.html
+++ b/index.html
@@ -165,7 +165,6 @@
         margin-left: auto;
       }
       .flatpickr-months {
-        padding: 8px 10px;
         background: rgba(0, 0, 0, 0.02);
       }
       .flatpickr-current-month {
@@ -180,6 +179,11 @@
       .flatpickr-months .flatpickr-next-month {
         display: flex;
         align-items: center;
+      }
+      .flatpickr-months .flatpickr-month {
+        height: initial;
+        position: initial;
+        display: flex;
       }
       .flatpickr-months .flatpickr-prev-month,
       .flatpickr-months .flatpickr-next-month {
