--- a/index.html
+++ b/index.html
@@ -174,6 +174,9 @@
         align-items: center;
         width: 100%;
         display: flex;
+        left: initial;
+        height: initial;
+        position: relative;
       }
       .flatpickr-months .flatpickr-prev-month,
       .flatpickr-months .flatpickr-next-month {
@@ -184,6 +187,7 @@
         height: initial;
         position: initial;
         display: flex;
+        align-items: center;
       }
       .flatpickr-months .flatpickr-prev-month,
       .flatpickr-months .flatpickr-next-month {
