--- a/index.html
+++ b/index.html
@@ -178,9 +178,10 @@
         height: initial;
         position: relative;
       }
-      .flatpickr-months .flatpickr-prev-month.flatpickr-disabled,
       .flatpickr-months .flatpickr-next-month.flatpickr-disabled {
-        display: none;
+        display: flex;
+        pointer-events: none;
+        opacity: 0.1;
       }
       .flatpickr-months .flatpickr-prev-month,
       .flatpickr-months .flatpickr-next-month {
