--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
         height: initial;
         position: relative;
       }
+      .flatpickr-months .flatpickr-prev-month.flatpickr-disabled,
       .flatpickr-months .flatpickr-next-month.flatpickr-disabled {
         display: flex;
         pointer-events: none;
