--- a/index.html
+++ b/index.html
@@ -164,6 +164,9 @@
         pointer-events: none;
         margin-left: auto;
       }
+      .flatpickr-current-month input.cur-year {
+        width: auto;
+      }
       .flatpickr-months {
         background: rgba(0, 0, 0, 0.02);
       }
