--- a/index.html
+++ b/index.html
@@ -160,12 +160,12 @@
         box-shadow: var(--shadow) !important;
         overflow: hidden;
       }
+      .flatpickr-current-month .flatpickr-monthDropdown-months {
+        width: auto;
+      }
       .flatpickr-current-month .numInputWrapper {
         pointer-events: none;
         margin-left: auto;
-      }
-      .flatpickr-current-month input.cur-year {
-        width: auto;
       }
       .flatpickr-months {
         background: rgba(0, 0, 0, 0.02);
