--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         overflow: hidden;
       }
       .flatpickr-current-month .flatpickr-monthDropdown-months {
-        width: auto;
+        padding: initial;
       }
       .flatpickr-current-month .numInputWrapper {
         pointer-events: none;
