--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
       .flatpickr-current-month .numInputWrapper {
         pointer-events: none;
         margin-left: auto;
+        width: initial;
       }
       .flatpickr-months {
         background: rgba(0, 0, 0, 0.02);
