--- a/index.html
+++ b/index.html
@@ -220,6 +220,8 @@
       }
       .flatpickr-day {
         border-radius: 14px !important;
+        line-height: 36px;
+        width: auto;
       }
       .flatpickr-day.selected,
       .flatpickr-day.startRange,
