--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@
         padding: 0.5rem;
         width: 100%;
       }
+      .flatpickr-days {
+        width: 100%;
+      }
       .flatpickr-calendar {
         width: 100% !important;
         border: 0 !important;
@@ -165,6 +168,11 @@
       .dayContainer {
         display: grid;
         grid-template-columns: repeat(7, 1fr);
+        column-gap: 0.3rem;
+        width: 100%;
+        max-width: initial;
+        place-items: center;
+        min-width: initial;
       }
       .flatpickr-current-month .flatpickr-monthDropdown-months {
         padding: initial;
@@ -220,6 +228,7 @@
       }
       .flatpickr-day {
         border-radius: 14px !important;
+        max-width: 36px;
         line-height: 36px;
         width: auto;
       }
