--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         border-radius: 14px !important;
         max-width: 36px;
         line-height: 36px;
-        width: auto;
+        width: 100%;
       }
       .flatpickr-day.selected,
       .flatpickr-day.startRange,
