--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
         min-width: initial;
       }
       .flatpickr-current-month .flatpickr-monthDropdown-months {
-        padding: initial;
+        padding: 0.3rem;
+        border-radius: 6px;
       }
       .flatpickr-current-month .numInputWrapper {
         pointer-events: none;
